# chainreactor

./: .gitignore  CHEATSHEET.md  README.md  bfg9000.py  bfg9000_do.py  domain.pddl  facts_extractor.py  flake.nix  pyproject.toml  run_tests.sh  solve_problem.py  spawn_instance.py
.github/workflows/: basic_operations.yml
aws_cve_scan/: .gitattributes  .gitignore  run_cve_bin_tool.sh  scan_cves.py  unix_amis.txt
aws_cve_scan/artifacts/: cve-bin-tool.sqlite
cloud_providers/: az_images.txt  az_images_2.txt  az_plans.json  do_images.txt  gcp_images.txt  update_az.sh  update_az_2.sh  update_az_3.py  update_do.sh  update_gcp.sh  update_images.sh
modules/: aws.py  azure.py  cloud_provider.py  connectors.py  digital_ocean.py  encoder.py  extractor.py  gcp.py  logger.py  model.py
modules/resources/: CVE_capabilities.toml  capabilities.toml
tests/: prob-add_directory_permission.pddl  prob-add_file_permission.pddl  prob-change_file_owner.pddl  prob-copy_file.pddl  prob-corrupt_daemon_file.pddl  prob-cve_shell_command_injection_needs_writable_dir_write_to_file.pddl  prob-cve_shell_command_injection_write_to_file.pddl  prob-download_file.pddl  prob-escalate_shell.pddl  prob-escalate_shell_sideload.pddl  prob-escalate_shell_user_executable.pddl  prob-escalate_shell_user_specific_sideload.pddl  prob-escalate_shell_via_chmod_suid.pddl  prob-passwd_writable.pddl  prob-read_file.pddl  prob-read_file_group.pddl  prob-read_file_suid.pddl  prob-upload_file.pddl  prob-write_to_file.pddl  prob-write_to_file_group.pddl  prob-write_to_file_suid.pddl
(+419 files in other folders)
