[tool.poetry]
name = "usenix-chainreactor"
version = "0.1.0"
description = ""
authors = ["Giulio De Pasquale <dev@depasquale.giugl.io>, Riccardo Iesari, Gabriel Pizarro"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "*"
ipython = "*"
pyyaml = "*"
colorama = "*"
pwntools = "*"
pddl = "0.3.1"
aenum = "*"
dill = "*"
toml = "*"
levenshtein = "*"
coloredlogs = "*"
paramiko = "*"
boto3 = "*"
cve-bin-tool = "*"
setuptools = "*"
python-dotenv = "*"
more-itertools = "*"
matplotlib = "*"
python-digitalocean = "*"
google-cloud-compute = "*"
chardet = "*"
azure-identity = "^1.17.1"
azure-mgmt-network = "^26.0.0"
azure-mgmt-compute = "^33.0.0"
azure-mgmt-resource = "^23.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
